	- unix/ipc/setview: managed the standard error
	- r/stdouterr: fork was ok and ipc wrong--fixed the test cases, added 2
	- fixed both ipc and ctcmd to get the stdouterr tests pass

1.46 
	- cygwin: odd numbers of quotes in the output
	- debug mode: print the commands as sent to cleartool (after quoting)
	- ipc mode: fix for examples of errors in the text of man pages
	- ipc mode: question marks in the comments
	- cygwin: support for ci -from outside the vob
	- cygwin: support for mounting views under /view

1.47 Sat Jan  9 18:55:04 GMTST 2010
        - cygwin: convert vob:/path input arguments
	- cygwin: return an error code for system
	- ipc: quote an empty string in the command sent to cleartool
	- cygwin: parsing output lines ending in backslash (e.g. from diff)
	- cygwin: convert non-existing path outside vobs (e.g. arg of: co -out)
	- ipc: return value for diff
	- stopped shifting exit codes: $? == 256 results in 0...
	- cygwin/exec: ipc mode not forced anymore
	- ALL CHANGES FROM 1.41 THROUGH HERE CONTRIBUTED BY Marc Girod.

1.48 Sun Feb 21 16:26:59 GMT 2010
        - _ipc_cmd: localize $_ to avoid modifying it in the caller context

1.49 Thu Mar  4 19:36:08 GMTST 2010
        - Removed an extra newline in fork mode under cygwin.

BACKWARD COMPATIBILITY NOTES:

A case was reported in which changes in 1.44 broke backward
compatibility, in the domain of quoting arguments.  This is
unfortunate, and was fixed in the critical cases (eg mkattr).
However, the changes were not gratuitous, and actually fixed
discrepancies between the behavior in the different modes and added
e.g. support for the use of quotes inside comments. So they were
not withdrawn, with the effect that total backwards compatibility
was not restored.

Version 1.45 again brings some amount of backwards incompatibilities,
with fixes to the way std output and error may be redirected or thrown
away. The benefit in increased functionality and consistency is once
again considered worth the while.